2004-12-30  Luca Ferretti  <elle.uca@infinito.it>

	* gnome-system-monitor.desktop.in.in: Use gnome-monitor as
	application icon. This icon is the one provided by gnome-icon-theme
	* src/callbacks.c: (cb_about_activate) use gnome-monitor as
	application logo an small tuning in about dialog: add documenters,
	use the same comment of .desktop file, fix copyright string, fix
	translator-credits string.
	* src/procman.c: (main) use gnome-monitor as application default icon.
	* src/Makefile.am: remove procman.png from build
	
	* Removed src/procman.png.
	
	Reviewed by Benoît Dejean.
	
2004-12-24  Benoît Dejean  <tazforever@dlfp.org>

	* src/interface.c: (create_sys_view):
	* src/load-graph.c: (get_memory): "Used Memory" -> "User Memory".
	Closes #94219.

	* src/procman.h: Removed unused enum.

2004-12-20  Benoît Dejean  <tazforever@dlfp.org>

	* NEWS:
	* configure.in: Released 2.9.3.

2004-12-17  Benoît Dejean  <tazforever@dlfp.org>

	* src/proctable.c: (cb_exclude), (refresh_list): Fixed a nasty crash :
	make sure a process is not added AND removed at the same time.
	Closes #161350.

2004-12-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added "th" (Thai) to ALL_LINGUAS.

2004-12-06  Benoît Dejean  <tazforever@dlfp.org>

	* src/procman.c: (main): Added missing gnome-vfs init/shutdown.

2004-12-06  Benoît Dejean  <tazforever@dlfp.org>

	* src/callbacks.c: (get_icon_for_device), (add_new_disks): Doesn't crash if
	gnome_vfs_volume_monitor_get_volume_for_path returns NULL.
	Closes #160560.

2004-11-30  Benoît Dejean  <tazforever@dlfp.org>

	* configure.in: post-release bump to 2.9.1.

2004-11-30  Benoît Dejean  <tazforever@dlfp.org>

	* NEWS: released 2.9.0

2004-11-30  Benoît Dejean  <tazforever@dlfp.org>

	* src/interface.c: (create_main_window), (update_sensitivity):
	* src/interface.h:
	* src/prettytable.c: (pretty_table_new):
	* src/prettytable.h:
	* src/procman.c: (procman_data_new), (procman_save_config), (main):
	* src/procman.h: