@@ -4,6 +4,7 @@
 gnome-system-monitor.desktop.in.in
 src/callbacks.c
 src/defaulttable.h
+src/gnome-system-monitor.schemas.in
 src/favorites.c
 src/infoview.c
 src/interface.c
