@@ -1,3 +1,12 @@
+2005-01-08  Sven Herzberg  <herzi@gnome-de.org>
+
+	reviewed by: seb128@debian.org
+
+	* po/POTFILES.in: added the .schemas.in file
+	* src/Makefile.am: added rules to add schemas i18n support
+	* src/gnome-system-monitor.schemas:
+	* src/gnome-system-monitor.schemas.in: moved .schemas to .schemas.in
+
 2004-12-30  Luca Ferretti  <elle.uca@infinito.it>
 
 	* gnome-system-monitor.desktop.in.in: Use gnome-monitor as
